test/pass/multiline.min
program
    string x := "hello
            life"
start
end
