test/fail/2char.min
program
    int c := 'ab'
start
end